--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <!-- FontAwesome 6 JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- APP -->
-    <section class="container">
+    <section class="container w-50" style="min-width: 600px;">
       <app-root></app-root>
     </section>
   </body>
